Fix issue with height of img wrap

--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -319,7 +319,7 @@ sup {
 			position: relative;
 			width: 100%;
 			height: 0;
-			padding-bottom: 50%;
+			padding-bottom: 48%;
 			overflow: hidden;
 			border-radius: rem-calc(2 2 0 0);
       background-color: $secondary-color;
